[package]
name = "stunne-diagnostics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync", "macros", "rt-multi-thread", "time"]
