[package]
name = "stunne-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stunne-protocol = { path = "../stunne-protocol" }
rand = { version = "0.8", features = ["getrandom"], default-features = false }
bytes = "1.2"
