[package]
name = "simple-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stunne-protocol = { path = "../../stunne-protocol" }
rand = { version = "0.8", features = ["getrandom"], default-features = false }
rand_chacha = "0.3.1"
bytes = "1.1"
